Refactor exit endpoint

--- a/web/resources/templates/login.html
+++ b/web/resources/templates/login.html
@@ -13,5 +13,5 @@
     <input type="text" name="path_to_file" id="path_to_file" required>
 </div>
 <div class="form-example">
-    <input type="submit" value="Отправить" onclick="sendJSON()">
+    <input type="submit" value="Отправить" onclick="login()">
 </div>
