--- a/web/resources/templates/exit.html
+++ b/web/resources/templates/exit.html
@@ -1,9 +1,9 @@
-<form action="" method="get" class="form-example">
-    <label>Вы точно хотите выйти? </label>
-    <div class="form-example">
-        <input type="submit" value="Да" name="choice">
-    </div>
-    <div class="form-example">
-        <input type="submit" value="Нет" name="choice">
-    </div>
-</form>
+<script src="web/resources/js/exit.js" type="text/javascript"></script>
+
+<label>Вы точно хотите выйти? </label>
+<div class="form-example">
+    <input type="submit" value="Да" onclick="exit(true)">
+</div>
+<div class="form-example">
+    <input type="submit" value="Нет" onclick="exit(false)">
+</div>
