--- a/web/resources/templates/solutions.html
+++ b/web/resources/templates/solutions.html
@@ -21,7 +21,7 @@
     }
 </script>
 
-<input type="submit" value="Таблица сравнения" onclick="window.location.href = '/table'">
+<input type="submit" value="Таблица схожести" onclick="window.location.href = '/table/similarity'">
 <input type="submit" value="Выйти" onclick="window.location.href = '/exit'">
 <form action="" method="get" class="form-example">
     <input type="submit" value="Сравнить">
