Add cosine similatiry

--- a/web/resources/templates/index.html
+++ b/web/resources/templates/index.html
@@ -15,8 +15,8 @@
 {% if body == 'exit' %}
 {% include 'exit.html' %}
 {% endif %}
-{% if body == 'similarity_table' %}
-{% include 'similarity_table.html' %}
+{% if body == 'table' %}
+{% include 'table.html' %}
 {% endif %}
 {% endblock %}
 </body>
