--- a/web/resources/templates/solutions.html
+++ b/web/resources/templates/solutions.html
@@ -22,6 +22,8 @@
 </script>
 
 <input type="submit" value="Таблица схожести" onclick="window.location.href = '/table/similarity'">
+<input type="submit" value="Таблица косинусного сходства" onclick="window.location.href = '/table/cosine_similarity'">
+<input type="submit" value="Таблица сходства Джаро" onclick="window.location.href = '/table/jaro_similatiry'">
 <input type="submit" value="Выйти" onclick="window.location.href = '/exit'">
 <form action="" method="get" class="form-example">
     <input type="submit" value="Сравнить">
