--- a/web/resources/templates/table.html
+++ b/web/resources/templates/table.html
@@ -1,6 +1,6 @@
 <input type="submit" value="Назад" onclick="window.location.href = '/solutions'">
 <table border="1" width="100%">
-    {% for row in similarity_table %}
+    {% for row in table %}
     <tr>
         {% for col in row %}
         <th>{{col}}</th>
